--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,7 @@
 @import "../node_modules/bootstrap/scss/variables-dark";
 
 // 4. Include any default map overrides here
+@use 'abstracts/maps';
 
 // 5. Include remainder of required parts
 @import "../node_modules/bootstrap/scss/maps";
