complete mobile main menu

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,2 +1,5 @@
 /* || Pages - Home
    ========================================================================== */
+
+@import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
+@import '../components/navigation/navbar-responsive-menu-center/navbar-responsive-menu-center';
