--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,14 +2,14 @@
 @import "../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-@use 'abstracts/variables';
+@import 'abstracts/variables-ls';
 
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/variables-dark";
 
 // 4. Include any default map overrides here
-@use 'abstracts/maps';
+@import 'abstracts/maps-ls';
 
 // 5. Include remainder of required parts
 @import "../node_modules/bootstrap/scss/maps";
@@ -26,6 +26,31 @@
 @import "../node_modules/bootstrap/scss/helpers";
 
 // Our add-ons from bootstrap
+// @import "../node_modules/bootstrap/scss/tables";
+@import "../node_modules/bootstrap/scss/forms";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/transitions";
+@import "../node_modules/bootstrap/scss/dropdown";
+// @import "../node_modules/bootstrap/scss/button-group";
+@import "../node_modules/bootstrap/scss/nav";
+@import "../node_modules/bootstrap/scss/navbar";
+// @import "../node_modules/bootstrap/scss/card";
+// @import "../node_modules/bootstrap/scss/accordion";
+// @import "../node_modules/bootstrap/scss/breadcrumb";
+// @import "../node_modules/bootstrap/scss/pagination";
+// @import "../node_modules/bootstrap/scss/badge";
+// @import "../node_modules/bootstrap/scss/alert";
+// @import "../node_modules/bootstrap/scss/progress";
+// @import "../node_modules/bootstrap/scss/list-group";
+@import "../node_modules/bootstrap/scss/close";
+// @import "../node_modules/bootstrap/scss/toasts";
+// @import "../node_modules/bootstrap/scss/modal";
+// @import "../node_modules/bootstrap/scss/tooltip";
+// @import "../node_modules/bootstrap/scss/popover";
+// @import "../node_modules/bootstrap/scss/carousel";
+// @import "../node_modules/bootstrap/scss/spinners";
+// @import "../node_modules/bootstrap/scss/offcanvas";
+// @import "../node_modules/bootstrap/scss/placeholders";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../node_modules/bootstrap/scss/utilities/api";
@@ -34,15 +59,15 @@
 // Vendors (jQuery | Bootstrap | etc)
 
 // Layout
-@use 'layout/header';
-@use 'layout/navigation';
-@use 'layout/main';
-@use 'layout/article';
-@use 'layout/footer';
-@use 'layout/aside';
+@import 'layout/header';
+@import 'layout/navigation';
+@import 'layout/main';
+@import 'layout/article';
+@import 'layout/footer';
+@import 'layout/aside';
 
 // Page-specific styles
-@use 'pages/home';
+@import 'pages/home';
 
 // Themes
-@use 'themes/default-theme';
+@import 'themes/default-theme';
