--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,2 +1,6 @@
 /* || Layout - Main
    ========================================================================== */
+
+main {
+  margin-bottom: 120px;
+}
