--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,3 +3,13 @@
 
 @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
 @import '../components/navigation/navbar-responsive-menu-center/navbar-responsive-menu-center';
+@import '../blocks/hero/hero-lead-img-anim/hero-lead-img-anim';
+@import '../blocks/company/company-tag-img-lead/company-tag-img-lead';
+@import '../components/link/link-circle-bg-icon/link-circle-bg-icon';
+@import '../components/banner/banner-roll-full-width/banner-roll-full-width';
+@import '../blocks/brand/brands-img-swiper/brands-img-swiper';
+@import '../blocks/services/services-cards-lead-icon/services-cards-lead-icon';
+@import '../blocks/services/services-text-img-cols/services-text-img-cols';
+@import '../blocks/testimonial/tm-slider-stat/tm-slider-stat';
+@import '../blocks/blog/blog-link-card-list/blog-link-card-list';
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
