--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -8,10 +8,16 @@
 // scss-docs-start theme-color-variables
 $primary: #1d1d1d;
 $secondary: #696969;
+$tertiary: #c9f31d;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
 $theme-colors: map-merge($theme-colors, ("primary": $primary, "secondary": $secondary));
+$custom-theme-colors: (
+  "tertiary": #c9f31d
+);
+$theme-colors: map-merge($theme-colors, $custom-theme-colors);
+
 // scss-docs-end theme-colors-map
 
 // || Body
@@ -23,15 +29,34 @@ $body-bg: #f1f3f5;
 $body-secondary-color: $secondary;
 $body-secondary-bg: $white;
 
+$body-tertiary-color: $tertiary;
+$body-tertiary-bg: $tertiary;
+
+// Grid columns
+//
+// Set the number of columns and specify the width of the gutters.
+
+$grid-gutter-width: 1.875rem;
+
+// Container padding
+
+$container-padding-x: $grid-gutter-width;
+
 // || Typography
 
 // scss-docs-start font-variables
 $font-family-sans-serif: "Epilogue", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+$line-height-medium: 1.75;
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
 $custom-font-sizes: (
-	7: 13px
+  18: 18px,
+  15: 15px,
+  14: 14px,
+  13: 13px,
+  12: 12px
 );
 
 $font-sizes: map-merge($font-sizes, $custom-font-sizes);
