--- a/scss/components/button/btn-capsule-shape-icon/_btn-capsule-shape-icon.scss
+++ b/scss/components/button/btn-capsule-shape-icon/_btn-capsule-shape-icon.scss
@@ -11,6 +11,8 @@
 
 .btn-capsule-shape-icon {
   line-height: 45px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 
   &:focus {
     background-color: $white;
