--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -13,3 +13,4 @@
 @import '../blocks/testimonial/tm-slider-stat/tm-slider-stat';
 @import '../blocks/blog/blog-link-card-list/blog-link-card-list';
 @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
+@import '../blocks/project/projects-cards-scrollable/projects-cards-scrollable';
