--- a/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
+++ b/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
@@ -19,9 +19,14 @@
 }
 
 .company-til-image-ot {
-   margin-bottom: 100px;
-
    @include media-breakpoint-down(lg) {
+      margin-bottom: 100px;
       padding: 0;
    }
+}
+
+.company-til-thumbnail-wr {
+   width: 50px;
+   height: 50px;
+   box-sizing: initial;
 }
