--- a/scss/blocks/hero/hero-lead-img-anim/_hero-lead-img-anim.scss
+++ b/scss/blocks/hero/hero-lead-img-anim/_hero-lead-img-anim.scss
@@ -8,19 +8,76 @@
 
 @import '../../../../node_modules/bootstrap/scss/variables';
 @import '../../../components/button/btn-capsule-shape-icon/btn-capsule-shape-icon';
+@import '../../../abstracts/functions-ls';
 
 .hero-lead-img-anim {
   padding-top: 144px;
   margin-bottom: 120px;
 }
 
-.hero-lia-img-desc-wr {}
+.hero-lia-tittle {
+  font-size: 2rem;
 
-.hero-lia-img-wr {
+  @include media-breakpoint-up(sm) {
+    font-size: 3rem;
+  }
+
+  @include media-breakpoint-up(md) {
+    font-size: 4rem;
+  }
+
+  @include media-breakpoint-up(xl) {
+    font-size: 5rem;
+  }
+}
+
+.hero-lia-no-wrap {
+  @include media-breakpoint-up(md) {
+    white-space: nowrap;
+  }
+}
+
+.hero-lia-circle-img-wr {
+  width: 180px;
+  height: 180px;
+  display: none;
+
+  @include media-breakpoint-up(lg) {
+    display: block;
+  }
+}
+
+.hero-lia-circle-img-arrow {
+  width: 40px;
+  height: 40px;
+}
+
+.hero-lia-img-desc-ctr-wr {
+  position: relative;
+  overflow: hidden;
+
+  @include media-breakpoint-up(lg) {
+    height: 400px;
+  }
+}
+
+.hero-lia-img-col {
   height: 400px;
 
-  & > img {
-    object-position: center;
+  @include media-breakpoint-up(lg) {
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: getColStretchWidth($grid-breakpoint: lg, $spacer: 2, $cols: 7);
+  }
+
+  @include media-breakpoint-up (xl) {
+    width: getColStretchWidth($grid-breakpoint: xl, $spacer: 2, $cols: 7);
+  }
+
+  @include media-breakpoint-up (xxl) {
+    width: getColStretchWidth($grid-breakpoint: xxl, $spacer: 2, $cols: 7);
   }
 }
 
