--- a/scss/components/navigation/navbar-responsive-menu-center/_navbar-responsive-menu-center.scss
+++ b/scss/components/navigation/navbar-responsive-menu-center/_navbar-responsive-menu-center.scss
@@ -4,10 +4,19 @@
 // 1. Features
 // Menubar center on devices
 // Center menu
-@use '../../text/rolling-text/rolling-text';
+@import '../../text/rolling-text/rolling-text';
+@import '../../form/form-search-anim/form-search-anim';
 
 // || navbar
-.navbar-responsive-menu-center {}
+.navbar-responsive-menu-center {
+  padding-top: 12px;
+  padding-bottom: 12px;
+
+  @include media-breakpoint-up(lg) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
 
 .navbar-rmc-container {
   @include media-breakpoint-down(lg) {
@@ -47,7 +56,18 @@
   }
 }
 
+
 // || nav
+
+.navbar-rmc-navbar {
+  @include media-breakpoint-up(lg) {
+    margin-left: 50px;
+    column-gap: 30px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+  }
+}
+
 .navbar-rmc-nav-item {
   &:not(:last-child) {
     @include media-breakpoint-down(lg) {
@@ -58,11 +78,4 @@
 
 .navbar-rmc-nav-link {
   padding: 15px 30px;
-}
-
-// || search form
-.navbar-rmc-search {
-  @include media-breakpoint-down(lg) {
-    display: none !important;
-  }
 }
