--- a/scss/blocks/services/services-cards-lead-icon/_services-cards-lead-icon.scss
+++ b/scss/blocks/services/services-cards-lead-icon/_services-cards-lead-icon.scss
@@ -6,7 +6,7 @@
 // Responsive heading and para 
 // Responsible cards
 
-@use '../../../components/card/card-lead-icon/card-lead-icon';
+@import '../../../components/card/card-lead-icon/card-lead-icon';
 
 .services-cards-lead-icon {
    margin-bottom: 120px;
