--- a/scss/components/card/card-lead-icon/_card-lead-icon.scss
+++ b/scss/components/card/card-lead-icon/_card-lead-icon.scss
@@ -8,6 +8,10 @@
 
 .card-lead-icon {
   padding: 50px 30px;
+
+  @include media-breakpoint-up(xl) {
+    padding: 60px;
+  }
 }
 
 .card-li-icon-wr {
