--- a/scss/abstracts/_utilities-ls.scss
+++ b/scss/abstracts/_utilities-ls.scss
@@ -34,5 +34,11 @@ $utilities: map-merge(
         ),
       ),
     ),
+    "custom-font-size": (
+      property: font-size,
+      responsive: true,
+      class: cfs,
+      values: $custom-font-sizes
+    )
   ),
 );
