--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -45,21 +45,25 @@ $container-padding-x: $grid-gutter-width;
 // || Typography
 
 // scss-docs-start font-variables
-$font-family-sans-serif: "Epilogue", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-epilogue: 'Epilogue', sans-serif;
+
+$font-family-base: $font-family-epilogue;
 
 $line-height-medium: 1.75;
 // scss-docs-end font-variables
 
 // scss-docs-start font-sizes
 $custom-font-sizes: (
-  18: 18px,
-  15: 15px,
-  14: 14px,
-  13: 13px,
-  12: 12px
+  12: $font-size-base * .75,
+  13: $font-size-base * .8125,
+  14: $font-size-base * .875,
+  15: $font-size-base * .9375,
+  18: $font-size-base * 1.125,
+  20: $font-size-base * 1.25,
+  24: $font-size-base * 1.5,
+  85: $font-size-base * 5.3125,
 );
 
-$font-sizes: map-merge($font-sizes, $custom-font-sizes);
 // scss-docs-end font-sizes
 
 // || Navbar
