--- a/scss/components/card/card-lead-icon-bg/_card-lead-icon-bg.scss
+++ b/scss/components/card/card-lead-icon-bg/_card-lead-icon-bg.scss
@@ -8,6 +8,10 @@
 .card-lead-icon-bg {
    padding: 40px 30px;
    background: url(../images/company/card-background-pattern.png) center / cover no-repeat, white;
+
+   @include media-breakpoint-up(xl) {
+      padding: 60px 40px;
+   }
 }
 
 .card-lib-icon-wr {
