temparary commit before applying module with funtion expressions

--- a/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
+++ b/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
@@ -9,6 +9,9 @@
 
 @import '../../../../node_modules/bootstrap/scss/variables';
 @import '../../../components/image/img-overlap-tile/img-overlap-tile';
+@import '../../../components/animation/anim-opacity/anim-opacity';
+@import '../../../components/animation/anim-scale-rotate-x/anim-scale-rotate-x';
+@import '../../../components/animation/anim-swipe-in-tb/anim-swipe-in-tb';
 
 .company-tag-img-lead {
    margin-bottom: 100px;
