--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,2 +1,4 @@
 /* || Abstracts - Header
    ========================================================================== */
+
+@import '../components/sticky/sticky-header-top-anim/sticky-header-top-anim';
