--- a/scss/abstracts/_mixins-ls.scss
+++ b/scss/abstracts/_mixins-ls.scss
@@ -221,3 +221,21 @@
     @extend %inline-flex-v-center-h-center;
   }
 }
+
+// || Animation
+
+@mixin make-animation($duration: 0.5s,
+  $animation-fill-mode: false) {
+  $name: anim-#{unique-id()};
+
+  @keyframes #{$name} {
+    @content;
+  }
+
+  animation-name: $name;
+  animation-duration: $duration;
+
+  @if $animation-fill-mode {
+    animation-fill-mode: $animation-fill-mode;
+  }
+}
