change modules named default export with function expression

--- a/scss/blocks/blog/blog-link-card-list/_blog-link-card-list.scss
+++ b/scss/blocks/blog/blog-link-card-list/_blog-link-card-list.scss
@@ -5,6 +5,7 @@
 // Contains tag, lead, card of blog with tags, image, date and tittle
 
 @import '../../../abstracts/mixins-ls';
+@import '../../../components/link/link-circle-bg-icon/link-circle-bg-icon';
 
 .blog-link-card-list {}
 
