--- a/scss/components/form/form-search-anim/_form-search-anim.scss
+++ b/scss/components/form/form-search-anim/_form-search-anim.scss
@@ -1,4 +1,4 @@
-/* Component - Form search anim
+/* || Component - Form search anim
   =========================================================================== */
 
 // 1. Features
