--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,2 +1,4 @@
 /* || Abstracts - Footer
    ========================================================================== */
+
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
