--- a/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
+++ b/scss/blocks/company/company-tag-img-lead/_company-tag-img-lead.scss
@@ -9,6 +9,7 @@
 
 @import '../../../../node_modules/bootstrap/scss/variables';
 @import '../../../components/image/img-overlap-tile/img-overlap-tile';
+@import '../../../components/link/link-circle-bg-icon/link-circle-bg-icon';
 @import '../../../components/animation/anim-opacity/anim-opacity';
 @import '../../../components/animation/anim-scale-rotate-x/anim-scale-rotate-x';
 @import '../../../components/animation/anim-swipe-in-tb/anim-swipe-in-tb';
