--- a/scss/components/animation/anim-swipe-in-tb/_anim-swipe-in-tb.scss
+++ b/scss/components/animation/anim-swipe-in-tb/_anim-swipe-in-tb.scss
@@ -4,25 +4,15 @@
 // 1. Features
 // Animate swipe in from top to bottom
 // 2. Notes
-// Make sure wrapper and inner element with these classes 
-
-@import '../../../abstracts/mixins-ls';
+// This component is 'anim-gsap' dependable 
 
 .anim-swipe-in-tb {
   overflow: hidden;
+  clip-path: inset(0 0 100% 0);
+  transition: clip-path .8s;
 }
 
 // Class use to select element for animation
 .anim-si-tb-animate {
-
-  @include make-animation($duration: 1s,
-    $animation-fill-mode: false) {
-    from {
-      clip-path: inset(0 0 100% 0);
-    }
-
-    to {
-      clip-path: inset(0 0 0 0);
-    }
-  }
+  clip-path: inset(0 0 0 0);
 }
