--- a/scss/components/image/image-overlap-tile/_image-overlap-tile.scss
+++ b/scss/components/image/image-overlap-tile/_image-overlap-tile.scss
@@ -1,9 +1,7 @@
-/* || Component - Img overlapping tile
+/* || Component - Image overlapping tile
    ========================================================================== */
 // 1. Features
 // The tile image overlap over an even bigger image
-
-@import '../../../abstracts/variables-ls';
 
 .image-overlap-tile {}
 
