--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,4 +1,2 @@
-/* || Abstracts - Header
+/* || Layout - Header
    ========================================================================== */
-
-@import '../components/sticky/sticky-header-top-anim/sticky-header-top-anim';
