--- a/scss/blocks/blog/blog-link-card-list/_blog-link-card-list.scss
+++ b/scss/blocks/blog/blog-link-card-list/_blog-link-card-list.scss
@@ -4,10 +4,9 @@
 // 1. Features
 // Contains tag, lead, card of blog with tags, image, date and tittle
 
-@import '../../../abstracts/mixins-ls';
-@import '../../../components/link/link-circle-bg-icon/link-circle-bg-icon';
-
-.blog-link-card-list {}
+.blog-link-card-list {
+  padding-bottom: 120px;
+}
 
 .blog-lcl-card-ctr {
   padding-top: 30px;
