--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,15 +1,50 @@
 /* || Pages - Home
    ========================================================================== */
 
+// 1. Notes
+// Each block/component with comment listed its dependencies 
+
+@import '../components/sticky/sticky-header-top-anim/sticky-header-top-anim';
+
+// || Component - Navbar responsive manu center
+@import '../components/text/rolling-text/rolling-text';
+@import '../components/form/form-search-anim/form-search-anim';
+@import '../components/navigation/navbar-responsive-menu-center/navbar-responsive-menu-center';
+
 @import '../components/loader/loader-full-wh-anim/loader-full-wh-anim';
 @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
 @import '../components/go-to-top/scroll-to-top-btn-anim/scroll-to-top-btn-anim';
+
+// || Block - Hero lead image animation
+@import '../components/button/btn-capsule-shape-icon/btn-capsule-shape-icon';
+@import '../components/animation/anim-gsap/anim-gsap';
 @import '../blocks/hero/hero-lead-img-anim/hero-lead-img-anim';
+
+// || Block - Company tag img lead
+@import '../components/image/image-overlap-tile/image-overlap-tile';
+@import '../components/link/link-circle-bg-icon/link-circle-bg-icon';
+@import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
+@import '../components/animation/anim-swipe-in-tb/anim-swipe-in-tb';
+@import '../components/animation/anim-swipe-in-lr-zb/anim-swipe-in-lr-zb';
 @import '../blocks/company/company-tag-img-lead/company-tag-img-lead';
+
 @import '../components/banner/banner-roll-full-width/banner-roll-full-width';
 @import '../blocks/brand/brands-img-swiper/brands-img-swiper';
+
+// || Block - Services cards lead icon
+@import '../components/card/card-lead-icon/card-lead-icon';
 @import '../blocks/services/services-cards-lead-icon/services-cards-lead-icon';
+
 @import '../blocks/project/projects-cards-scrollable/projects-cards-scrollable';
+
+// || Block - Services text img cols
+@import '../components/banner/banner-roll-color-change/banner-roll-color-change';
+@import '../components/card/card-lead-icon-bg/card-lead-icon-bg';
 @import '../blocks/services/services-text-img-cols/services-text-img-cols';
+
 @import '../blocks/testimonial/tm-slider-stat/tm-slider-stat';
 @import '../blocks/blog/blog-link-card-list/blog-link-card-list';
+
+// || Block - Footer responsive cols lead
+@import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
+@import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
