--- a/scss/base/_sitewide.scss
+++ b/scss/base/_sitewide.scss
@@ -106,3 +106,13 @@
 	justify-content: center;
 	align-items: center;
 }
+
+// || Color
+
+.text-gray-500 {
+	color: var(--bs-gray-500);
+}
+
+.text-tertiary-600 {
+	color: var(--tertiary-600);
+}
