--- a/scss/blocks/services/services-cards-lead-icon/_services-cards-lead-icon.scss
+++ b/scss/blocks/services/services-cards-lead-icon/_services-cards-lead-icon.scss
@@ -6,6 +6,12 @@
 // Responsive heading and para 
 // Responsible cards
 
-.services-cards-lead-icon {
+.services-cards-lead-icon {}
+
+.services-cli-mb {
    margin-bottom: 120px;
+}
+
+.services-cli-pt {
+   padding-top: 120px;
 }
