--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -3,6 +3,7 @@
 
 @import '../../node_modules/bootstrap/scss/variables';
 
+// || Overriding bootstrap
 // || Theme colors
 // scss-docs-start theme-color-variables
 $primary: #1d1d1d;
@@ -16,8 +17,11 @@ $custom-theme-colors: (
   "tertiary": #c9f31d
 );
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
-
 // scss-docs-end theme-colors-map
+
+// scss-docs-start theme-bg-subtle-variables
+$primary-bg-subtle:       tint-color($primary, 80%);
+// scss-docs-end theme-bg-subtle-variables
 
 // || Body
 // Settings for the `<body>` element.
@@ -29,7 +33,7 @@ $body-secondary-color: $secondary;
 $body-secondary-bg: $white;
 
 $body-tertiary-color: $tertiary;
-$body-tertiary-bg: $tertiary;
+$body-tertiary-bg: #f4f4f4;
 
 // Grid columns
 //
@@ -45,6 +49,8 @@ $container-padding-x: $grid-gutter-width;
 
 // scss-docs-start font-variables
 $font-family-epilogue: 'Epilogue', sans-serif;
+$font-family-sora: 'Sora', sans-serif;
+$font-family-pd: 'Playfair Display', serif;;
 
 $font-family-base: $font-family-epilogue;
 
@@ -69,3 +75,7 @@ $custom-font-sizes: (
 $navbar-toggler-focus-width: 0;
 
 $navbar-light-toggler-icon-bg: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48"><path d="M142-203q-19.75 0-33.375-13.675Q95-230.351 95-251.175 95-271 108.625-284.5 122.25-298 142-298h676q19.75 0 33.875 13.675Q866-270.649 866-250.825 866-230 851.875-216.5 837.75-203 818-203H142Zm0-230q-19.75 0-33.375-13.675Q95-460.351 95-480.175 95-500 108.625-513.5 122.25-527 142-527h676q19.75 0 33.875 13.675Q866-499.649 866-479.825 866-460 851.875-446.5 837.75-433 818-433H142Zm0-229q-19.75 0-33.375-13.675Q95-689.351 95-710.175 95-730 108.625-743.5 122.25-757 142-757h676q19.75 0 33.875 13.675Q866-729.649 866-709.825 866-689 851.875-675.5 837.75-662 818-662H142Z"/></svg>');
+
+// || Local variables
+
+$tertiary-600: shade-color($tertiary, 20%) !default;
