--- a/scss/components/card/card-lead-icon/_card-lead-icon.scss
+++ b/scss/components/card/card-lead-icon/_card-lead-icon.scss
@@ -14,14 +14,19 @@
   }
 }
 
-.card-li-icon-wr {
+.card-li-icon-wr-w-50 {
   width: 50px;
+}
+
+.card-li-icon-wr-w-60 {
+  width: 60px;
 }
 
 .card-li-link {
   transition: background-color 0.4s;
   position: relative;
   padding: 11px 0 11px 30px;
+
   &:hover {
     background-color: white;
   }
