--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,6 +3,9 @@
 
 // 1. Notes
 // Each block/component with comment listed its dependencies 
+// Make sure no repeated @import as it duplicate itself due to the use of @import 
+// instead of @use, we will replace this aproach once start migrate to @use 
+// implemented bootstrap.
 
 @import '../components/sticky/sticky-header-top-anim/sticky-header-top-anim';
 
@@ -13,9 +16,13 @@
 
 @import '../components/loader/loader-full-wh-anim/loader-full-wh-anim';
 @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
+
+// || Component - Scroll smoother gsap
+@import '../components/scroll-to-top/scroll-to-top-btn-anim/scroll-to-top-btn-anim';
 @import '../components/scroll/scroll-smoother-gsap/scroll-smoother-gsap';
 
 // || Block - Hero lead image animation
+// @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
 @import '../components/button/btn-capsule-shape-icon/btn-capsule-shape-icon';
 @import '../components/modal/modal-youtube-bs/modal-youtube-bs';
 @import '../components/animation/anim-gsap/anim-gsap';
@@ -23,15 +30,17 @@
 @import '../blocks/hero/hero-lead-img-anim/hero-lead-img-anim';
 
 // || Block - Company tag img lead
+// @import '../components/cursor/cursor-hover-scale/cursor-hover-scale';
 @import '../components/image/image-overlap-tile/image-overlap-tile';
 @import '../components/link/link-circle-bg-icon/link-circle-bg-icon';
 @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+// @import '../components/animation/anim-gsap/anim-gsap';
 @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
 @import '../components/animation/anim-swipe-in-tb/anim-swipe-in-tb';
 @import '../components/animation/anim-swipe-in-lr-zb/anim-swipe-in-lr-zb';
 @import '../blocks/company/company-tag-img-lead/company-tag-img-lead';
 
-@import '../components/banner/banner-roll-full-width/banner-roll-full-width';
+@import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 @import '../blocks/brand/brands-img-swiper/brands-img-swiper';
 
 // || Block - Services cards lead icon
@@ -41,7 +50,7 @@
 @import '../blocks/project/projects-cards-scrollable/projects-cards-scrollable';
 
 // || Block - Services text img cols
-@import '../components/banner/banner-roll-color-change/banner-roll-color-change';
+// @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 @import '../components/card/card-lead-icon-bg/card-lead-icon-bg';
 @import '../blocks/services/services-text-img-cols/services-text-img-cols';
 
