--- a/scss/blocks/hero/hero-trans-banner-anim/_hero-trans-banner-anim.scss
+++ b/scss/blocks/hero/hero-trans-banner-anim/_hero-trans-banner-anim.scss
@@ -7,9 +7,15 @@
 // The banner is slide in from down on display
 
 .hero-trans-banner-anim {
-  padding-top: 200px;
+  padding-top: 180px;
 }
 
 .hero-tba-content-ctr {
-  margin-bottom: 60px;
+  margin-bottom: 70px;
+}
+
+.hero-tba-banner-text-font {
+  @include media-breakpoint-up(sm) {
+    font-size: 10vw;
+  }
 }
