--- a/scss/blocks/lead/lead-parallax-bg-sp/_lead-parallax-bg-sp.scss
+++ b/scss/blocks/lead/lead-parallax-bg-sp/_lead-parallax-bg-sp.scss
@@ -38,3 +38,9 @@
   padding-top: 80px;
   padding-bottom: 80px;
 }
+
+.lead-pbg-sp-me-lg-6 {
+  @include media-breakpoint-up(lg) {
+    margin-right: 4.5rem !important;
+  }
+}
