Complete about page bs xl view

--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -66,6 +66,7 @@ $custom-font-sizes: (
   18: $font-size-base * 1.125,
   20: $font-size-base * 1.25,
   24: $font-size-base * 1.5,
+  28: $font-size-base * 1.75,
   85: $font-size-base * 5.3125,
 );
 
