Test about page

--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -67,6 +67,7 @@ $custom-font-sizes: (
   20: $font-size-base * 1.25,
   24: $font-size-base * 1.5,
   28: $font-size-base * 1.75,
+  36: $font-size-base * 2.25,
   85: $font-size-base * 5.3125,
 );
 
