--- a/scss/blocks/company/company-performans-stat-tms/_company-performans-stat-tms.scss
+++ b/scss/blocks/company/company-performans-stat-tms/_company-performans-stat-tms.scss
@@ -12,6 +12,14 @@
   }
 }
 
-.company-ps-tms-gx-6 {
-  --bs-gutter-x: 4rem;
+.company-ps-tms-gx-lg-6 {
+  @include media-breakpoint-up(lg) {
+    --bs-gutter-x: 4rem;
+  }
+}
+
+.company-ps-tms-gx-xxl-7 {
+  @include media-breakpoint-up(xxl) {
+    --bs-gutter-x: 6rem;
+  }
 }
