--- a/scss/components/carousel/swiper-vh-profiles-loop/_swiper-vh-profiles-loop.scss
+++ b/scss/components/carousel/swiper-vh-profiles-loop/_swiper-vh-profiles-loop.scss
@@ -7,10 +7,4 @@
 // 2. Dependencies
 // Swiper JS
 
-.swiper-vh-profiles-loop {
-   height: 430px;
-
-   @include media-breakpoint-up(xl) {
-      height: 300px;
-   }
-}
+.swiper-vh-profiles-loop {}
