--- a/scss/components/banner/banner-infinite-roll/_banner-infinite-roll.scss
+++ b/scss/components/banner/banner-infinite-roll/_banner-infinite-roll.scss
@@ -29,19 +29,11 @@
    left: -5px;
 }
 
-.banner-ir-hover-display {
-   .banner-ir-fg-wr {
-      display: none;
-   }
-
-   &:hover {
-      .banner-ir-fg-wr {
-         display: block;
-      }
-   }
-}
-
 .banner-ir-text-stroke {
    color: transparent;
    -webkit-text-stroke: 0.5px $body-color;
+
+   @media screen and (min-width: 100em) {
+      -webkit-text-stroke: 1px $body-color;
+   }
 }
