--- a/scss/components/card/card-hover-swap-elem/_card-hover-swap-elem.scss
+++ b/scss/components/card/card-hover-swap-elem/_card-hover-swap-elem.scss
@@ -10,6 +10,10 @@
   @include media-breakpoint-up(lg) {
     padding: 70px 0;
   }
+
+  @include media-breakpoint-up(xxl) {
+    padding: 80px 0;
+  }
 }
 
 .card-hse-img-wr {
