Create services page and add base structure

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,6 +79,7 @@
 // Page-specific styles
 @import 'pages/home';
 @import 'pages/about';
+@import 'pages/services';
 
 // Themes
 @import 'themes/default-theme';
