--- a/scss/pages/_services.scss
+++ b/scss/pages/_services.scss
@@ -29,6 +29,7 @@
 // @import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
 
 // || Block - services-resp-cnt-img-pin (Services-responsive-content-image-pinning)
+// @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
 @import '../blocks/services/services-resp-cnt-img-pin/services-resp-cnt-img-pin';
 
 // || Block - Services text img cols
