--- a/scss/blocks/services/services-resp-cnt-img-pin/_services-resp-cnt-img-pin.scss
+++ b/scss/blocks/services/services-resp-cnt-img-pin/_services-resp-cnt-img-pin.scss
@@ -11,6 +11,22 @@
    padding: 100px 0;
 }
 
+.sr-cip-container {
+   max-width: 540px;
+   margin-left: auto;
+   margin-right: auto;
+
+   @include media-breakpoint-up(md) {
+      max-width: 720px;
+   }
+
+   @include media-breakpoint-up(lg) {
+      max-width: none;
+      margin-left: 0;
+      margin-right: 0;
+   }
+}
+
 .sr-cip-service-ctr {
    &:not(:last-child) {
       margin-bottom: 80px;
