Create team page and its base structure

--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -56,3 +56,7 @@
 // @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
 @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
 @import '../blocks/lead/lead-parallax-bg-sp/lead-parallax-bg-sp';
+
+// || Block - Footer responsive cols lead
+// @import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
+// @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
