--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,7 @@
 @import 'pages/home';
 @import 'pages/about';
 @import 'pages/services';
+@import 'pages/team';
 
 // Themes
 @import 'themes/default-theme';
