--- a/scss/pages/_team.scss
+++ b/scss/pages/_team.scss
@@ -1,4 +1,4 @@
-/* || Page - Services
+/* || Page - Team
   =========================================================================== */
 
 
@@ -19,24 +19,6 @@
 // @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 // @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
-// || Block - Services cards lead icon
-// @import '../components/card/card-lead-icon/card-lead-icon';
-// @import '../blocks/services/services-cards-lead-icon/services-cards-lead-icon';
-
-// || Block - services-resp-cnt-img-pin (Services-responsive-content-image-pinning)
-// @import '../components/link/link-hover-bg-border-trans/link-hover-bg-border-trans';
-@import '../blocks/services/services-resp-cnt-img-pin/services-resp-cnt-img-pin';
-
-// || Block - Services text img cols
-// @import '../components/card/card-lead-icon-bg/card-lead-icon-bg';
-// @import '../blocks/services/services-text-img-cols/services-text-img-cols';
-
-// || Block - Service features aic ( accordian image component)
-// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
-// @import '../components/animation/anim-gsap/anim-gsap';
-// @import '../components/accordion/accordion-anim-fade-in-up/accordion-anim-fade-in-up';
-// @import '../blocks/services/service-features-aic/service-features-aic';
-
 // || Block - Lead parallax bg sp (sides padding)
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
@@ -47,20 +29,3 @@
 // || Block - Footer responsive cols lead
 // @import '../components/banner/banner-lg-text-stroke/banner-lg-text-stroke';
 // @import '../blocks/footer/footer-resp-cols-lead/footer-resp-cols-lead';
-
-// || Block - Services text img cols
-.services-tic-services {
-  padding-top: 120px;
-  padding-bottom: 100px;
-  margin-bottom: 0;
-
-  .services-tic-card {
-    background: white;
-  }
-}
-
-// || Block - Service features aic ( accordian image component)
-.sf-aic-services {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
