--- a/scss/pages/_team.scss
+++ b/scss/pages/_team.scss
@@ -19,6 +19,18 @@
 // @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
 // @import '../blocks/hero/hero-trans-banner-anim/hero-trans-banner-anim';
 
+// || Block - Team profile anim st (sticky header)
+// @import '../components/banner/banner-infinite-roll/banner-infinite-roll';
+// @import '../components/animation/anim-gsap/anim-gsap';
+// @import '../components/image/image-foreground-rt/image-foreground-rt';
+@import '../blocks/team/team-profiles-card-anim/team-profiles-card-anim';
+
+// || Block - tm-swiper-cards-resp-ct (Testimonials swiper cards responsive controls top)
+// @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
+// @import '../components/animation/anim-gsap/anim-gsap';
+// @import '../components/animation/anim-forward-flip-in-x/anim-forward-flip-in-x';
+@import '../blocks/testimonial/tm-swiper-cards-resp-ct/tm-swiper-cards-resp-ct';
+
 // || Block - Lead parallax bg sp (sides padding)
 // @import '../components/miscellaneous/js-opacity-zero/js-opacity-zero';
 // @import '../components/animation/anim-gsap/anim-gsap';
