--- a/scss/abstracts/_variables-ls.scss
+++ b/scss/abstracts/_variables-ls.scss
@@ -20,7 +20,7 @@ $theme-colors: map-merge($theme-colors, $custom-theme-colors);
 // scss-docs-end theme-colors-map
 
 // scss-docs-start theme-bg-subtle-variables
-$primary-bg-subtle:       tint-color($primary, 80%);
+$primary-bg-subtle: tint-color($primary, 80%);
 // scss-docs-end theme-bg-subtle-variables
 
 // || Body
@@ -50,7 +50,7 @@ $container-padding-x: $grid-gutter-width;
 // scss-docs-start font-variables
 $font-family-epilogue: 'Epilogue', sans-serif;
 $font-family-sora: 'Sora', sans-serif;
-$font-family-pd: 'Playfair Display', serif;;
+$font-family-pd: 'Playfair Display', serif;
 
 $font-family-base: $font-family-epilogue;
 
@@ -68,6 +68,7 @@ $custom-font-sizes: (
   24: $font-size-base * 1.5,
   28: $font-size-base * 1.75,
   36: $font-size-base * 2.25,
+  50: $font-size-base * 3.125,
   85: $font-size-base * 5.3125,
 );
 
