Create contact page and add its base structure and change footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -81,6 +81,7 @@
 @import 'pages/about';
 @import 'pages/services';
 @import 'pages/team';
+@import 'pages/contact';
 
 // Themes
 @import 'themes/default-theme';
